ags (3.17.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements
	* added ags-fx-sf2-synth unit tests
	* added ags-fx-sfz-synth unit tests

ags (3.17.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc

ags (3.17.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsSFZSynth
	* implemented ags-fx-sfz-synth
	* implemented AgsSFZInstrumentLoader worker
	* implemented AgsApplySFZInstrument task
	* implemented ags_sfz_synth_util_load_instrument()
	* implemented additional getter/setter functions of AgsSFZFile, AgsSFZGroup, AgsSFZRegion and AgsSFZSample

ags (3.16.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV because of unitialized field

ags (3.16.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSynthUtil missing increment during iteration
	* fixed AgsFMSynthUtil missing increment during iteration
	* fixed AgsEnvelopeUtil missing increment during iteration
	* minor improvements

ags (3.16.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed test

ags (3.16.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* minor improvements

ags (3.16.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsStopThread
	* fixed call to gst_init()

ags (3.16.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added command line argument --no-config
	* added AGS_CONFIG environment variable
	* updated gsequencer.1.xml
	* improved unit tests make use of AGS_TEST_CONFIG and --no-config

ags (3.16.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsSimpleFile proper plugin failure while reading
	* fixed ref-count ags-fx-ladspa, ags-fx-dssi, ags-fx-lv2 and ags-fx-vst3

ags (3.16.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsFFPlayer loader timeout
	* fixed memory leaks
	* fixed reference leaks