@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2019 Joël Krähemann
+ * Copyright (C) 2005-2022 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -40,6 +40,7 @@ G_BEGIN_DECLS
 #define AGS_IS_OSCILLATOR_CLASS(class)     (G_TYPE_CHECK_CLASS_TYPE((class), AGS_TYPE_OSCILLATOR))
 #define AGS_OSCILLATOR_GET_CLASS(obj)      (G_TYPE_INSTANCE_GET_CLASS((obj), AGS_TYPE_OSCILLATOR, AgsOscillatorClass))
 
+#define AGS_OSCILLATOR_DEFAULT_SAMPLERATE (44100.0)
 #define AGS_OSCILLATOR_DEFAULT_FRAME_COUNT (44100.0 / 27.5)
 #define AGS_OSCILLATOR_DEFAULT_SYNC_POINT_COUNT (3)
 
