@@ -129,6 +129,9 @@ ags_synth_input_line_init(AgsSynthInputLine *synth_input_line)
 {
   AgsOscillator *oscillator;
 
+  g_signal_connect((GObject *) synth_input_line, "samplerate-changed",
+		   G_CALLBACK(ags_synth_input_line_samplerate_changed_callback), NULL);
+
   synth_input_line->name = NULL;
   synth_input_line->xml_type = "ags-synth-input-line";
 
@@ -139,9 +142,6 @@ ags_synth_input_line_init(AgsSynthInputLine *synth_input_line)
 		   GTK_WIDGET(oscillator),
 		   0, 0,
 		   1, 1);
-
-  g_signal_connect((GObject *) synth_input_line, "samplerate-changed",
-		   G_CALLBACK(ags_synth_input_line_samplerate_changed_callback), NULL);
 }
 
 void
